crates/ruff_linter/src/rules/flake8_logging_format/snapshots/ruff_linter__rules__flake8_logging_format__tests__preview__G004_G004_arg_order.py.snap
---
source: crates/ruff_linter/src/rules/flake8_logging_format/mod.rs
---
G004 Logging statement uses f-string
 --> G004_arg_order.py:9:14
  |
9 | logger.error(f"{X} -> %s", Y)
  |              ^^^^^^^^^^^^
  |
help: Convert to lazy `%` formatting

G004 Logging statement uses f-string
  --> G004_arg_order.py:10:14
   |
10 | logger.error(f"{Y} -> %s", X)
   |              ^^^^^^^^^^^^
   |
help: Convert to lazy `%` formatting
