crates/ruff_linter/src/rules/flake8_logging_format/snapshots/ruff_linter__rules__flake8_logging_format__tests__preview__G004_G004_implicit_concat.py.snap
---
source: crates/ruff_linter/src/rules/flake8_logging_format/mod.rs
---
G004 [*] Logging statement uses f-string
 --> G004_implicit_concat.py:6:10
  |
5 | log = logging.getLogger(__name__)
6 | log.info(f"a" f"b {variablename}")
  |          ^^^^^^^^^^^^^^^^^^^^^^^^
7 | log.info("a " f"b {variablename}")
8 | log.info("prefix " f"middle {variablename}" f" suffix")
  |
help: Convert to lazy `%` formatting
  |
6 - log.info(f"a" f"b {variablename}")
6 + log.info("ab %s", variablename)
  |

G004 [*] Logging statement uses f-string
 --> G004_implicit_concat.py:7:10
  |
5 | log = logging.getLogger(__name__)
6 | log.info(f"a" f"b {variablename}")
7 | log.info("a " f"b {variablename}")
  |          ^^^^^^^^^^^^^^^^^^^^^^^^
8 | log.info("prefix " f"middle {variablename}" f" suffix")
  |
help: Convert to lazy `%` formatting
  |
7 - log.info("a " f"b {variablename}")
7 + log.info("a b %s", variablename)
  |

G004 [*] Logging statement uses f-string
 --> G004_implicit_concat.py:8:10
  |
6 | log.info(f"a" f"b {variablename}")
7 | log.info("a " f"b {variablename}")
8 | log.info("prefix " f"middle {variablename}" f" suffix")
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Convert to lazy `%` formatting
  |
8 - log.info("prefix " f"middle {variablename}" f" suffix")
8 + log.info("prefix middle %s suffix", variablename)
  |
